# docker_build_cpp

./: .gitignore  Dockerfile  README  README.md
docker/: Dockerfile
scr_example/: CMakeLists.txt
scr_example/scr/: CMakeLists.txt  main.cpp
